--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,20 @@
 {
   "name": "Мой криптопортфель",
   "short_name": "CryptoPortfel",
-  "description": "Отслеживайте свой криптопортфель с актуальными ценами",
+  "description": "Мой криптопортфель с живыми ценами",
   "start_url": "/CryptoPortfel/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#34495e",
-  "orientation": "portrait",
+  "background_color": "#3498db",
+  "theme_color": "#3498db",
+  "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "images/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512.png",
+      "src": "images/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
